--- a/settings.json
+++ b/settings.json
@@ -50,7 +50,6 @@
   "workbench.iconTheme": "material-icon-theme",
   "workbench.startupEditor": "newUntitledFile",
   "editor.tabSize": 2,
-  "window.zoomLevel": 0,
   "extensions.ignoreRecommendations": true,
   
   "emmet.triggerExpansionOnTab": true,
@@ -76,5 +75,9 @@
   "material-icon-theme.activeIconPack": "angular",
   "material-icon-theme.folders.theme": "specific",
   "editor.minimap.enabled": false,
-  "liveServer.settings.donotShowInfoMsg": true
+  "liveServer.settings.donotShowInfoMsg": true,
+  "terminal.integrated.shell.windows": "C:\\Program Files\\Git\\bin\\bash.exe",
+  "terminal.external.windowsExec": "C:\\Program Files\\Git\\bin\\bash.exe",
+  "window.zoomLevel": 1,
+  "tabnine.experimentalAutoImports": true,
 }
